# CuriosComicCrawler

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  __init__.py  config.json  downloadCC.py  pyproject.toml  upscaleCC.py
src/curios_comic_crawler/: __init__.py  _cli.py  _http.py  _worker_threads.py  cli_download.py  cli_launcher.py  cli_upscale.py  config.py  downloader.py  image_ops.py  launcher.py  logging_utils.py  logreset.py  model_registry.py  models.py  sr_engine.py  sr_engine_ncnn.py  sr_engine_onnx.py  sr_engine_opencv.py  upscaler.py
src/curios_comic_crawler/assets/: realesr-animevideov3.onnx
tests/: conftest.py  test_config.py  test_downloader.py  test_image_ops.py  test_model_registry.py  test_sr_engine_ncnn.py  test_sr_engine_onnx.py  test_sr_engine_opencv.py  test_upscaler.py
tools/: README.md  _archs.py  convert_onnx_model.py
