[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curios-comic-crawler"
version = "0.5.0"
description = "Download Sequential Art comic pages and locally upscale them with OpenCV super-resolution models."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Luraminaki" }]
dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "pydantic>=2.7",
    # Powers the default "onnx" upscale engine (see sr_engine_onnx.py) with a small model
    # bundled directly in this package -- lightweight and actively maintained, unlike the
    # ncnn-based engine this replaced, so it's a base dependency rather than an extra.
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "basedpyright>=1.18", "pytest>=8.0"]
# Only needed for the "opencv" upscale engine (see sr_engine_opencv.py). Not a base dependency
# since opencv-contrib-python is heavy and conflicts with plain opencv-python if anything else
# in the environment depends on that instead.
opencv = ["opencv-contrib-python>=4.9"]
# Only needed to run tools/convert_onnx_model.py, which regenerates the bundled model in
# sr_engine_onnx.py's assets/ from the official PyTorch weights. Not needed to use the
# package -- onnxruntime (a base dependency) is all that's needed to run the already-converted,
# already-bundled model.
convert = ["torch>=2.0", "onnx>=1.14"]

[project.scripts]
comiccrawler = "curios_comic_crawler.cli_launcher:cli"
comiccrawler-download = "curios_comic_crawler.cli_download:cli"
comiccrawler-upscale = "curios_comic_crawler.cli_upscale:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/curios_comic_crawler"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "PL", "N", "SIM", "RUF", "D"]
ignore = [
    "D203", # incompatible with D211 (no-blank-line-before-class)
    "D213", # incompatible with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004"]
